[package]
name = "sql_conver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "*",features = ["mysql","runtime-tokio-rustls"] }
minijinja = { version = "*" }
tera = { version = "1" }
serde = { version = "1.0.216", features = ["derive"] }