[package]
name = "sql_conver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "*", features = ["mysql", "runtime-tokio-rustls"] }
tera = { version = "1" }
serde = { version = "1.0.216", features = ["derive"] }
convert_case = { version = "*", features = ["rand"] }
chrono = { version = "0.4", features = ["default", "serde"] }
quick-xml = { version = "0.37", features = ["tokio", "encoding_rs"] }
inflections = { version = "1" }

# print file tree crate ignore
#termtree  = { version = "0.5" }